--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Profit Calculator - Home</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
     <!-- Header Section -->
@@ -15,7 +15,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="logo">
-                <img src="PC logo.jpeg" alt="Profit Calculator" class="logo-image">
+                <img src="assets/image/logo.png" alt="logo" class="logo-image">
                 <h1>Profit Calculator</h1>
             </div>
             <div class="nav-links-container">
@@ -72,66 +72,80 @@
     <!-- Services Section -->
     <section class="services-section" id="services">
         <h2>Our Services</h2>
-        <div class="row">
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-calculator"></i>
-                    </div>
-                    <h3>Regular Calculator</h3>
-                    <p>Quick and easy profit calculations for your basic business needs.</p>
-                </div>
+        <div class="services-container">
+            <div class="service">
+                <h3>Regular Calculator</h3>
+                <p>Quick and easy profit calculations for your basic business needs.</p>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-cogs"></i>
-                    </div>
-                    <h3>Advanced Calculator</h3>
-                    <p>Detailed profit calculations with advanced features for comprehensive analysis.</p>
-                </div>
+            <div class="service">
+                <h3>Advanced Calculator</h3>
+                <p>Detailed profit calculations with advanced features for comprehensive analysis.</p>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-percent"></i>
-                    </div>
-                    <h3>Margin Calculator</h3>
-                    <p>Calculate profit margins efficiently to understand your profitability.</p>
-                </div>
+            <div class="service">
+                <h3>Margin Calculator</h3>
+                <p>Calculate profit margins efficiently to understand your profitability.</p>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-list"></i>
-                    </div>
-                    <h3>Multiple Items Calculator</h3>
-                    <p>Calculate profits for multiple items simultaneously to save time and effort.</p>
-                </div>
+            <div class="service">
+                <h3>Multiple Items Calculator</h3>
+                <p>Calculate profits for multiple items simultaneously to save time and effort.</p>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-hand-holding-usd"></i>
-                    </div>
-                    <h3>Break-Even Calculator</h3>
-                    <p>Determine the break-even point to understand when your business will become profitable.</p>
-                </div>
+            <div class="service">
+                <h3>Break-Even Calculator</h3>
+                <p>Determine the break-even point to understand when your business will become profitable.</p>
             </div>
-            <div class="card-container">
-                <div class="card">
-                    <div class="icon-wrapper">
-                        <i class="fas fa-handshake"></i>
-                    </div>
-                    <h3>ROI Calculator</h3>
-                    <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
-                </div>
+            <div class="service">
+                <h3>ROI Calculator</h3>
+                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
+            </div>
+            <div class="service">
+                <h3>Subscription Revenue Calculator</h3>
+                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
+            </div>
+            <div class="service">
+                <h3>Discount Calculator</h3>
+                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
             </div>
         </div>
     </section>
 
-    <!-- Remaining Sections: Contact, Footer -->
-    <!-- Add these sections similar to the Services section -->
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-section logo-section">
+<img src="assets/icons/footer logo.svg" alt="Footer Logo" class="footer-logo">
+                <h3>Profit Calculator</h3>
+                <p>The fastest way to figure out your profit</p>
+            </div>
+            <div class="footer-section quick-links-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Update Log</a></li>
+                    <li><a href="#">Regular Calculator</a></li>
+                </ul>
+            </div>
+            <div class="footer-section other-section">
+                <h3>Calculator</h3>
+                <ul>
+                    <li><a href="#">Profit Calculator</a></li>
+                    <li><a href="#">Investment Calculator</a></li>
+                    <li><a href="#">Expense Tracker</a></li>
+                    <li><a href="#">ROI Calculator</a></li>
+                </ul>
+            </div>
+            <div class="footer-section follow-section">
+                <h3>Follow Us!</h3>
+                <div class="social-icons">
+                    <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-discord"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <p>Email me at: <a href="mailto:example@lorem.com">Lorem Ipsum</a></p>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
