--- a/index.html
+++ b/index.html
@@ -75,35 +75,43 @@
         <div class="services-container">
             <div class="service">
                 <h3>Regular Calculator</h3>
-                <p>Quick and easy profit calculations for your basic business needs.</p>
+                <p>Effortlessly perform basic profit calculations to meet your everyday business needs.</p>
             </div>
             <div class="service">
                 <h3>Advanced Calculator</h3>
-                <p>Detailed profit calculations with advanced features for comprehensive analysis.</p>
+                <p>Utilize detailed profit calculations with advanced features for a comprehensive business analysis.</p>
             </div>
             <div class="service">
                 <h3>Margin Calculator</h3>
-                <p>Calculate profit margins efficiently to understand your profitability.</p>
+                <p>Efficiently calculate profit margins to gain insights into your business's profitability</p>
             </div>
             <div class="service">
                 <h3>Multiple Items Calculator</h3>
-                <p>Calculate profits for multiple items simultaneously to save time and effort.</p>
+                <p>Quickly calculate profits for multiple items simultaneously to streamline your workflow.</p>
             </div>
             <div class="service">
                 <h3>Break-Even Calculator</h3>
-                <p>Determine the break-even point to understand when your business will become profitable.</p>
+                <p>Identify the break-even point to determine when your business will achieve profitability.</p>
             </div>
             <div class="service">
                 <h3>ROI Calculator</h3>
-                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
+                <p>Assess the return on investment to measure the effectiveness of your business investments.</p>
             </div>
             <div class="service">
                 <h3>Subscription Revenue Calculator</h3>
-                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
+                <p>Estimate subscription revenue to analyze the potential return on investment over time</p>
             </div>
             <div class="service">
                 <h3>Discount Calculator</h3>
-                <p>Calculate the return on investment to evaluate the efficiency of your investments.</p>
+                <p>Compute discounts to understand the impact on prices and maximize profit.</p>
+            </div>
+            <div class="service">
+                <h3>Coming soon</h3>
+                <p>New features are in development; please stay tuned. In the meantime, explore our other valuable services.</p>
+            </div>
+            <div class="service">
+                <h3>Coming soon</h3>
+                <p>New features are in development; please stay tuned. In the meantime, explore our other valuable services.</p>
             </div>
         </div>
     </section>
