--- a/Calculator/example.html
+++ b/Calculator/example.html
@@ -89,6 +89,35 @@
             </div>
         </div>
     </section>
+    <div class="why-use-it">
+        <div class="why-use-it-content">
+            <h2>Why Should You Use It?</h2>
+            <hr class="divider"> <!-- Add the HR tag here -->
+            <div class="why-use-it-cards">
+                <div class="why-use-it-card profit-margin-card">
+                    <i class="fas fa-chart-line"></i>
+                    <h3>Increased Profit Margin</h3>
+                    <p>Our calculator helps you optimize pricing strategies to maximize profitability.</p>
+                </div>
+                <div class="why-use-it-card customer-insights-card">
+                    <i class="fas fa-users"></i>
+                    <h3>Customer Insights</h3>
+                    <p>Understand customer behavior and preferences to tailor your offerings effectively.</p>
+                </div>
+                <div class="why-use-it-card operational-efficiency-card">
+                    <i class="fas fa-tasks"></i>
+                    <h3>Operational Efficiency</h3>
+                    <p>Streamline operations by identifying cost-effective production and distribution methods.</p>
+                </div>
+                <div class="why-use-it-card full-width-card financial-planning-card">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3>Financial Planning</h3>
+                    <p>Plan future investments and budgets with accurate profit projections.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
